@@ -6,7 +6,7 @@ CPSBoxes >= 0.0.1
 CPSUtil >= 0.5.1
 CPSCompat >= 0.2.0
 CPSInstaller >= 0.18.0
-CPSCore > 3.26.0
+CPSCore > 3.27.0
 CPSDocument > 0.33.0
 CPSSchemas > 0.40.0
 CPSDirectory
