@@ -1,27 +1,19 @@
 ##parameters=utool=None
 # $Id$
-# return the base url of the cps server, ex: /cps/ or /
+"""
+Return the base url of the cps server, ex: /cps/ or /
+Deal with virtual hosting
 
-#return context.absolute_url(relative=1)+'/'
-if not utool:
-    utool = context.portal_url
-REQUEST = getattr(context, 'REQUEST', None)
-if REQUEST is None:
-    path_info = ''
-else:
-    path_info = getattr(REQUEST, 'PATH_INFO', '')
+XXX AT: this is now a method of portal_url, this script is here only for
+compatibility reasons.
+"""
 
-if path_info.startswith('/VirtualHostBase/') :
-    # apache detection
-    # Inside-out hosting (VHM _vh_)
-    if path_info.find('_vh_') > 0:
-        base = path_info.split('_vh_')[1]
-        if base.find('/') > 0:
-            base = base.split('/')[0]
-        return '/' + base + '/'
-    else:
-        return '/'
-else:
-    # XXX squid detection
-    # classic case
-    return utool.getPortalPath() + '/'
+from zLOG import LOG, DEBUG
+from Products.CMFCore.utils import getToolByName
+
+if utool is None:
+    utool = getToolByName(context, 'portal_url')
+
+base_url = utool.getBaseURL()
+
+return base_url
