@@ -1,6 +1,6 @@
 Requires:
 ~~~~~~~~~
--
+- CPSCore > 0.27.0 for the new URL tool.
 New features:
 ~~~~~~~~~~~~~
 - Revisited the localroles management UI.
@@ -51,6 +51,11 @@ Bug fixes:
 - fix #535: Redesign the advanced search form (completed)
 - #838 use folder_contents as nav action only when explicitly requested in
   content_lib/info_detail
+- Replaced portal_url with the new URLTool defined in CPSCore to have methods
+  dealing with virtual hosting: now able to get the base url (portal absolute
+  url path), get an object absolute url from its relative url, and get its
+  breadcrumbs without objects hidden with the virtual hosting. Work to replace
+  incorrect code in a virtual hosting environment is still in progress.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Don't use strings for permission names in the installer.
